--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="numberCardsBoughtDescripTxt">Bought:</string>
     <string name="numberCardsBoughtTxtInitial">0/15</string>
     <string name="goldAmountDescript">Gold:</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
