--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,16 @@
 <resources>
     <string name="app_name">Battle Cards</string>
-    <string name="cardsToBuyTxt">Cards Available</string>
-    <string name="cardsBoughtTxt">Cards Bought</string>
-    <string name="numberCardsBoughtDescripTxt">Bought:</string>
-    <string name="numberCardsBoughtTxtInitial">0/15</string>
-    <string name="goldAmountDescript">Gold:</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="txtToBuy">Cards Available</string>
+    <string name="txtBought">Cards Bought</string>
+    <string name="txtCardsBoughtDescrip">Bought:</string>
+    <string name="txtCardsBoughtInitial">0/15</string>
+    <string name="txtGoldAmountDescrip">Gold:</string>
+    <string name="btnStart">Start</string>
+
+    <string name="txtAttackDescrip">Attack:</string>
+    <string name="txtDefenseDescrip">Defense:</string>
+    <string name="txtAbilityDescrip">Ability:</string>
+    <string name="txtResourceDescrip">Res:</string>
+    <string name="txtGoldDescrip">:Gold</string>
 </resources>
